# quant-store

./: .gitignore  Dockerfile  README.md  btc-data.csv  btc.ipynb  cta.ipynb  cvar-mean.ipynb  cvar-mean.py  cvar.ipynb  docker-compose.yml  double-low.py  etf-momentum.md  etf-momentum.py  futures-manage.py  main.py  pca-state-enhance (1).ipynb  pca-state-enhance.ipynb  pyproject.toml  rsi_crossover_strategy.json  rsi_crossover_strategy.py  scrappy.md  scrappy.py  signal.csv  simulation_trade.ipynb  skfolio.ipynb  strategy.py
dataset/: README.md  manage_scheduler.sh  quick_read.py  read_data.py  rename_etf_columns.py  scheduler.py  update.py  update_etf.md  update_etf.py  view_data.py
strategy/: 932368cons.xls  cb_filtered_data.csv  close.parquet  cta.ipynb  data.parquet  double-low.ipynb  double-low.py  etf-mom-Copy1 (1).ipynb  etf-mom-Copy1 (2).ipynb  etf-mom-Copy1.ipynb  etf-mom.ipynb  low-market-value-Copy1.ipynb  low-market-value.ipynb  pb-reverse.ipynb  pb.parquet  skfolio.ipynb  stock_board_mapping.parquet  网格交易策略规则文档.md
trader/: __init__.py  akshare_data_source.py  backtest.py  backtester.py  data_handler.py  data_source.py  event_engine.py  execution.py  main.ipynb  main.py  portfolio.py  prd.md  strategy.py
trader-v2/: etfs.csv  sample.py
trader-v2/components/: base.py  csv_data_feed.py  data_feed.py  execution_handler.py  metrics.py  portfolio.py  strategy.py
trader-v2/core/: event_bus.py  events.py
trader/backtest/: backtester.py  execution.py  (+1 more)
trader_v2/: etf.csv  etf_data.csv  holds.csv  live_run.py  prd.md  returns.csv  sample.ipynb  sample.py
(+187 files in other folders)
