[project]
name = "dataset"
version = "0.1.0"
description = "量化数据存储系统 - 使用DuckDB存储可转债数据"
authors = [
    {name = "Quant Store", email = "your-email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "adata>=2.9.3",
    "duckdb>=0.9.0",
    "numpy>=1.24.4",
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"] 
